--- a/app/packs/styles/application.sass
+++ b/app/packs/styles/application.sass
@@ -1,1 +1,6 @@
-@import '~bootstrap/dist/css/bootstrap'
+@import "tailwindcss/base"
+@import "tailwindcss/components"
+
+// You can add your own custom components/styles here
+
+@import "tailwindcss/utilities"
