--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -5,32 +5,71 @@
         <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:items-start sm:border-t sm:border-gray-200 sm:pt-5">
           <%= form.label :name, :class => "block text-sm font-medium leading-5 text-gray-700 sm:mt-px sm:pt-2" %>
           <div class="mt-1 sm:mt-0 sm:col-span-2">
-            <div class="max-w-lg rounded-md shadow-sm sm:max-w-xs">
+            <%- css_classes = form.object.errors.include?(:name) ? "max-w-lg relative rounded-md shadow-sm sm:max-w-xs" : "max-w-lg rounded-md shadow-sm sm:max-w-xs" %>
+            <div class="<%= css_classes %>">
               <%= form.text_field :name, :class => "form-input block w-full transition duration-150 ease-in-out sm:text-sm sm:leading-5" %>
+              <% if form.object.errors.include?(:name) %>
+                <div class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
+                  <svg class="h-5 w-5 text-red-500" fill="currentColor" viewBox="0 0 20 20">
+                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
+                  </svg>
+                </div>
+              <% end %>
             </div>
+            <% if form.object.errors.include?(:name) %>
+              <% form.object.errors[:name].each do |error| %>
+                <p class="mt-2 text-sm text-red-600">↑ <%= error.upcase_first %></p>
+              <% end %>
+            <% end %>
           </div>
         </div>
 
         <div class="mt-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:items-start sm:border-t sm:border-gray-200 sm:pt-5">
           <%= form.label :price, :class => "block text-sm font-medium leading-5 text-gray-700 sm:mt-px sm:pt-2" %>
           <div class="mt-1 sm:mt-0 sm:col-span-2">
-            <div class="max-w-lg rounded-md shadow-sm sm:max-w-xs">
+            <%- css_classes = form.object.errors.include?(:price) ? "max-w-lg relative rounded-md shadow-sm sm:max-w-xs" : "max-w-lg rounded-md shadow-sm sm:max-w-xs" %>
+            <div class="<%= css_classes %>">
               <%= form.number_field :price, :class => "form-input block w-full transition duration-150 ease-in-out sm:text-sm sm:leading-5" %>
+              <% if form.object.errors.include?(:price) %>
+                <div class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
+                  <svg class="h-5 w-5 text-red-500" fill="currentColor" viewBox="0 0 20 20">
+                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
+                  </svg>
+                </div>
+              <% end %>
             </div>
+            <% if form.object.errors.include?(:price) %>
+              <% form.object.errors[:price].each do |error| %>
+                <p class="mt-2 text-sm text-red-600">↑ <%= error.upcase_first %></p>
+              <% end %>
+            <% end %>
           </div>
         </div>
 
         <div class="mt-6 sm:mt-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:items-start sm:border-t sm:border-gray-200 sm:pt-5">
           <%= form.label :unit, :class => "block text-sm font-medium leading-5 text-gray-700 sm:mt-px sm:pt-2" %>
           <div class="mt-1 sm:mt-0 sm:col-span-2">
-            <div class="max-w-lg rounded-md shadow-sm sm:max-w-xs">
+            <%- css_classes = form.object.errors.include?(:unit) ? "max-w-lg relative rounded-md shadow-sm sm:max-w-xs" : "max-w-lg rounded-md shadow-sm sm:max-w-xs" %>
+            <div class="<%= css_classes %>">
               <%= form.select(
                 :unit,
-                options_for_select(["Per hour", "Per day", "Per iteration"]),
+                options_for_select(["", "Per hour", "Per day", "Per iteration"]),
                 {},
                 {:class => "block form-select w-full transition duration-150 ease-in-out sm:text-sm sm:leading-5"}
               ) %>
+              <% if form.object.errors.include?(:unit) %>
+                <div class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
+                  <svg class="h-5 w-5 text-red-500" fill="currentColor" viewBox="0 0 20 20">
+                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
+                  </svg>
+                </div>
+              <% end %>
             </div>
+            <% if form.object.errors.include?(:unit) %>
+              <% form.object.errors[:unit].each do |error| %>
+                <p class="mt-2 text-sm text-red-600">↑ <%= error.upcase_first %></p>
+              <% end %>
+            <% end %>
           </div>
         </div>
       </div>
