--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,8 +12,15 @@ html lang="#{I18n.locale}"
     = javascript_pack_tag "scripts/application"
 
   body
-    .container-fluid.content
-      section.main-content
-        = yield
+    .min-h-screen.bg-gray-100
+      .py-10
+        header
+          .max-w-7xl.mx-auto.px-4.sm:px-6.lg:px-8
+            h1.text-3xl.font-bold.leading-tight.text-gray-900
+              = yield(:page_title)
+
+        main
+          .max-w-7xl.mx-auto.sm:px-6.lg:px-8
+            = yield
 
     = yield(:append_javascript)
