--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,10 +14,10 @@ html lang="#{I18n.locale}"
   body
     .min-h-screen.bg-gray-100
       .py-10
-        header
-          .max-w-7xl.mx-auto.px-4.sm:px-6.lg:px-8
-            h1.text-3xl.font-bold.leading-tight.text-gray-900
-              = yield(:page_title)
+        - if content_for(:page_header)
+          header
+            .max-w-7xl.mx-auto.px-4.sm:px-6.lg:px-8
+              = yield(:page_header)
 
         main
           .max-w-7xl.mx-auto.sm:px-6.lg:px-8
