--- a/app/views/services/edit.html.slim
+++ b/app/views/services/edit.html.slim
@@ -1,6 +1,15 @@
-header.header
-  h1 Editing service
+- content_for(:page_title) { @service.name }
 
-  = link_to "←", services_path, :class => "btn btn-secondary"
+- content_for(:page_header)
+  .md:flex.md:items-center.md:justify-between
+    .flex-1.min-w-0
+      h1.text-2xl.font-bold.leading-7.text-gray-900.sm:text-3xl.sm:leading-9.sm:truncate
+        | Editing service
+
+    .mt-4.flex.md:mt-0.md:ml-4
+      span.shadow-sm.rounded-md
+        button.inline-flex.items-center.px-4.py-2.border.border-gray-300.text-sm.leading-5.font-medium.rounded-md.text-gray-700.bg-white.hover:text-gray-500.focus:outline-none.focus:shadow-outline-blue.focus:border-blue-300.active:text-gray-800.active:bg-gray-50.transition.duration-150.ease-in-out type="button" Edit
+      span.ml-3.shadow-sm.rounded-md
+        button.inline-flex.items-center.px-4.py-2.border.border-gray-300.text-sm.leading-5.font-medium.rounded-md.text-gray-700.bg-white.hover:text-gray-500.focus:outline-none.focus:shadow-outline-blue.focus:border-blue-300.active:text-gray-800.active:bg-gray-50.transition.duration-150.ease-in-out type="button" Publish
 
 == render "form", :service => @service
