--- a/app/views/services/index.html.slim
+++ b/app/views/services/index.html.slim
@@ -1,23 +1,31 @@
-header.header
-  h1 Services
+- content_for(:page_title, "Services")
 
-  = link_to "New Service", new_service_path, :class => "btn btn-primary"
+- content_for(:page_header)
+  .md:flex.md:items-center.md:justify-between
+    .flex-1.min-w-0
+      h1.text-2xl.font-bold.leading-7.text-gray-900.sm:text-3xl.sm:leading-9.sm:truncate
+        = content_for(:page_title)
 
-table.resource-list
-  thead
-    tr
-      th Name
-      th Unit
-      th Price
-      th.resource-list-actions
+    .mt-4.flex.md:mt-0.md:ml-4
+      span.shadow-sm.rounded-md
+        = link_to "Add new service", new_service_path, :class => "inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 active:text-gray-800 active:bg-gray-50 transition duration-150 ease-in-out"
 
-  tbody
-    - @services.each do |service|
+.mt-6.sm:mt-5
+  table.resource-list
+    thead
       tr
-        td = link_to service.name, service
-        td = link_to service.unit, service
-        td = link_to service.price, service
-        td.resource-list-actions
-          .btn-group role="group"
-            = link_to "Edit", edit_service_path(service), :class => "btn btn-sm btn-outline-primary"
-            = link_to "Destroy", service, :data => {:confirm => "Are you sure?"}, :method => :delete, :class => "btn btn-sm btn-outline-danger"
+        th Name
+        th Unit
+        th Price
+        th.resource-list-actions
+
+    tbody
+      - @services.each do |service|
+        tr
+          td = link_to service.name, service
+          td = link_to service.unit, service
+          td = link_to service.price, service
+          td.resource-list-actions
+            .btn-group role="group"
+              = link_to "Edit", edit_service_path(service), :class => "btn btn-sm btn-outline-primary"
+              = link_to "Destroy", service, :data => {:confirm => "Are you sure?"}, :method => :delete, :class => "btn btn-sm btn-outline-danger"
