--- a/app/views/services/edit.html.slim
+++ b/app/views/services/edit.html.slim
@@ -7,7 +7,7 @@
         | Editing service
 
     .mt-4.flex.md:mt-0.md:ml-4
-      span.ml-3.shadow-sm.rounded-md
+      span.shadow-sm.rounded-md
         = button_to "Delete", @service, :class => "inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 active:text-gray-800 active:bg-gray-50 transition duration-150 ease-in-out", :data => {:confirm => "Are you sure?"}, :method => :delete
 
 == render "form", :service => @service
