Proper whitespace across breakpoints

--- a/app/views/services/new.html.slim
+++ b/app/views/services/new.html.slim
@@ -4,4 +4,5 @@
       h1.text-2xl.font-bold.leading-7.text-gray-900.sm:text-3xl.sm:leading-9.sm:truncate
         | Add new service
 
-== render "form", :service => @service
+.mt-6.max-w-8xl.mx-auto.px-4.sm:px-6.lg:px-8
+  == render "form", :service => @service
