--- a/app/views/services/edit.html.slim
+++ b/app/views/services/edit.html.slim
@@ -10,4 +10,5 @@
       span.shadow-sm.rounded-md
         = button_to "Delete", @service, :class => "inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 active:text-gray-800 active:bg-gray-50 transition duration-150 ease-in-out", :data => {:confirm => "Are you sure?"}, :method => :delete
 
-== render "form", :service => @service
+.mt-6.max-w-8xl.mx-auto.px-4.sm:px-6.lg:px-8
+  == render "form", :service => @service
