--- a/app/views/services/index.html.slim
+++ b/app/views/services/index.html.slim
@@ -10,7 +10,7 @@
       span.shadow-sm.rounded-md
         = link_to "Add new service", new_service_path, :class => "inline-flex items-center px-4 py-2 border border-gray-300 text-sm leading-5 font-medium rounded-md text-gray-700 bg-white hover:text-gray-500 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 active:text-gray-800 active:bg-gray-50 transition duration-150 ease-in-out"
 
-.mt-6.sm:mt-5
+.mt-6.max-w-8xl.mx-auto.sm:px-6.lg:px-8
   .flex.flex-col
     .-my-2.overflow-x-auto.sm:-mx-6.lg:-mx-8
       .py-2.align-middle.inline-block.min-w-full.sm:px-6.lg:px-8
