--- a/app/views/services/index.html.slim
+++ b/app/views/services/index.html.slim
@@ -7,8 +7,7 @@
         = content_for(:page_title)
 
     .mt-4.flex.md:mt-0.md:ml-4
-      span.shadow-sm.rounded-md
-        = link_to "Add new service", new_service_path, :class => "inline-flex items-center px-4 py-2 border border-transparent text-sm leading-5 font-medium rounded text-indigo-700 bg-indigo-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150"
+      = render(PageHeadingActionLinkSecondaryComponent.new(:label => "Add new service", :url => new_service_path))
 
 .mt-6.max-w-8xl.mx-auto.sm:px-6.lg:px-8
   .flex.flex-col
