--- a/app/views/services/new.html.slim
+++ b/app/views/services/new.html.slim
@@ -1,5 +1,5 @@
 - content_for(:page_header)
-  .md:flex.md:items-center.md:justify-between
+  .sm:flex.sm:items-center.sm:justify-between
     .flex-1.min-w-0
       h1.text-2xl.font-bold.leading-7.text-gray-900.sm:text-3xl.sm:leading-9.sm:truncate
         | Add new service
