--- a/app/views/services/edit.html.slim
+++ b/app/views/services/edit.html.slim
@@ -1,13 +1,13 @@
 - content_for(:page_title) { @service.name }
 
 - content_for(:page_header)
-  .sm:flex.sm:items-center.sm:justify-between
-    .flex-1.min-w-0
-      h1.text-2xl.font-bold.leading-7.text-gray-900.sm:text-3xl.sm:leading-9.sm:truncate
-        | Editing service
-
-    .mt-4.flex.sm:mt-0.sm:ml-4
-      = render(PageHeadingDeleteActionComponent.new(:label => "Delete", :url => service_path(@service)))
+  = render( \
+    PageHeadingComponent.new( \
+      :title => "Editing service", \
+      :actions => [ \
+        PageHeadingDeleteActionComponent.new(:label => "Delete", :url => service_path(@service)),
+      ] \
+    ))
 
 .mt-6.max-w-8xl.mx-auto.px-4.sm:px-6.lg:px-8
   == render "form", :service => @service
