--- a/app/views/services/index.html.slim
+++ b/app/views/services/index.html.slim
@@ -1,13 +1,13 @@
 - content_for(:page_title, "Services")
 
 - content_for(:page_header)
-  .sm:flex.sm:items-center.sm:justify-between
-    .flex-1.min-w-0
-      h1.text-2xl.font-bold.leading-7.text-gray-900.sm:text-3xl.sm:leading-9.sm:truncate
-        = content_for(:page_title)
-
-    .mt-4.flex.sm:mt-0.sm:ml-4
-      = render(PageHeadingActionLinkSecondaryComponent.new(:label => "Add new service", :url => new_service_path))
+  = render( \
+    PageHeadingComponent.new( \
+      :title => content_for(:page_title), \
+      :actions => [ \
+        PageHeadingActionLinkSecondaryComponent.new(:label => "Add new service", :url => new_service_path) \
+      ] \
+    ))
 
 .mt-6.max-w-8xl.mx-auto.sm:px-6.lg:px-8
   .flex.flex-col
