Move base PageHeading component to sidecar

--- a/app/views/services/index.html.slim
+++ b/app/views/services/index.html.slim
@@ -2,7 +2,7 @@
 
 - content_for(:page_header)
   = render( \
-    PageHeadingComponent.new( \
+    PageHeading::Component.new( \
       :title => content_for(:page_title), \
       :actions => [ \
         PageHeading::ActionLinkSecondaryComponent.new(:label => "Add new service", :url => new_service_path) \
