--- a/app/views/services/edit.html.slim
+++ b/app/views/services/edit.html.slim
@@ -2,7 +2,7 @@
 
 - content_for(:page_header)
   = render( \
-    PageHeadingComponent.new( \
+    PageHeading::Component.new( \
       :title => "Editing service", \
       :actions => [ \
         PageHeading::DeleteActionComponent.new(:label => "Delete", :url => service_path(@service)),
