Add meta content slot
This allows us to render PageHeadings with meta and actions:

https://tailwindui.com/components/application-ui/headings/page-headings#component-7654075f650c9f1044bfcf1b1b6ffd77

We could probably do something like we've done with actions, however for
now using content areas seem like the easier path. If we ever extract a
Meta component it might make sense to do it like actions.

We should also be aware that content slots are coming to ViewComponents,
which is yet another way of doing this.

--- a/app/components/page_heading/component.html.slim
+++ b/app/components/page_heading/component.html.slim
@@ -3,6 +3,10 @@
     h1.text-2xl.font-bold.leading-7.text-gray-900.sm:text-3xl.sm:leading-9.sm:truncate
       = @title
 
+    - if meta.present?
+      .mt-1.flex.flex-col.sm:flex-row
+        = meta
+
   - @actions.each do |action|
     .mt-4.flex.sm:mt-0.sm:ml-4
       = render(action)
