--- a/lib/templates/slim/scaffold/index.html.slim
+++ b/lib/templates/slim/scaffold/index.html.slim
@@ -26,7 +26,7 @@
               - @<%= plural_table_name %>.each do |<%= singular_table_name %>|
                 tr
 <% attributes.each do |attribute| -%>
-                  td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to <%= singular_table_name %>.<%= attribute %>, <%= singular_table_name %>
+                  td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to <%= singular_table_name %>.<%= attribute.name %>, <%= singular_table_name %>
 <% end -%>
                   td.px-6.py-4.whitespace-no-wrap.text-right.text-sm.leading-5.font-medium
                     = link_to "Edit", edit_<%= singular_table_name %>_path(<%= singular_table_name %>), :class => "text-indigo-600 hover:text-indigo-900"
