--- a/app/views/customers/_form.html.slim
+++ b/app/views/customers/_form.html.slim
@@ -1,9 +1,9 @@
 = form_for(customer) do |form|
-  = render(Form::InputGroupComponent.new(:form => form, :attribute => :company_name))
-  = render(Form::InputGroupComponent.new(:form => form, :attribute => :tax_region))
-  = render(Form::InputGroupComponent.new(:form => form, :attribute => :tax_id))
-  = render(Form::InputGroupComponent.new(:form => form, :attribute => :invoice_email))
-  = render(Form::InputGroupComponent.new(:form => form, :attribute => :phone))
+  = render(Form::InputGroup::Component.new(:form => form, :attribute => :company_name))
+  = render(Form::InputGroup::Component.new(:form => form, :attribute => :tax_region))
+  = render(Form::InputGroup::Component.new(:form => form, :attribute => :tax_id))
+  = render(Form::InputGroup::Component.new(:form => form, :attribute => :invoice_email))
+  = render(Form::InputGroup::Component.new(:form => form, :attribute => :phone))
 
   div class="mt-8 border-t border-gray-200 pt-5"
     div class="flex justify-end"
