Add textarea input component

--- a/app/views/customers/_form.html.slim
+++ b/app/views/customers/_form.html.slim
@@ -4,6 +4,7 @@
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :tax_id))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :invoice_email))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :phone))
+  = render(Form::InputGroup::TextareaComponent.new(:form => form, :attribute => :address))
 
   div class="mt-8 border-t border-gray-200 pt-5"
     div class="flex justify-end"
