Add email input component

--- a/app/views/customers/_form.html.slim
+++ b/app/views/customers/_form.html.slim
@@ -2,7 +2,7 @@
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :company_name))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :tax_region))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :tax_id))
-  = render(Form::InputGroup::Component.new(:form => form, :attribute => :invoice_email))
+  = render(Form::InputGroup::EmailComponent.new(:form => form, :attribute => :invoice_email))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :phone))
   = render(Form::InputGroup::TextareaComponent.new(:form => form, :attribute => :address))
 
