--- a/app/components/form/input_group/component.html.slim
+++ b/app/components/form/input_group/component.html.slim
@@ -1,16 +1,14 @@
 div class="mt-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:items-start sm:border-t sm:border-gray-200 sm:pt-5"
-  = @form.label @attribute, :class => "block text-sm font-medium leading-5 text-gray-700 sm:mt-px sm:pt-2"
+  = label
 
   div class="mt-1 sm:mt-0 sm:col-span-2"
-    - css_classes = @object.errors.include?(@attribute) ? "max-w-lg relative rounded-md shadow-sm sm:max-w-xs" : "max-w-lg rounded-md shadow-sm sm:max-w-xs"
-    div class="#{css_classes}"
+    div class=input_field_wrapper_classes
       = input_field
 
-      - if @object.errors.include?(@attribute)
+      - if errors?
         div class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none"
           svg class="h-5 w-5 text-red-500" fill="currentColor" viewBox="0 0 20 20"
             path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd"
 
-    - if @object.errors.include?(@attribute)
-      - @object.errors[@attribute].each do |error|
-        p class="mt-2 text-sm text-red-600" = "↑ #{error.upcase_first}"
+    - errors.each do |error|
+      p class="mt-2 text-sm text-red-600" = "↑ #{error.upcase_first}"
