--- a/lib/templates/slim/scaffold/_form.html.slim
+++ b/lib/templates/slim/scaffold/_form.html.slim
@@ -1,11 +1,12 @@
-= simple_form_for(<%= singular_table_name %>) do |f|
-  = f.error_notification
-  = f.error_notification :message => f.object.errors[:base].to_sentence if f.object.errors[:base].present?
-
-  .form-inputs
+= form_for(<%= singular_table_name %>) do |form|
 <%- attributes.each.with_index do |attribute, index| -%>
-    = f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %><% if index == 0 %>, :autofocus => true<% end %>
+  = render(Form::InputGroup::Component.new(:form => form, :attribute => :<%= attribute.name %>))
 <%- end -%>
 
-  .form-actions
-    = f.button :submit, :class => "btn btn-primary"
+  div class="mt-8 border-t border-gray-200 pt-5"
+    div class="flex justify-end"
+      span class="ml-3 inline-flex rounded-md shadow-sm"
+        = link_to "Cancel", <%= plural_table_name %>_path, :class => "py-2 px-4 border border-gray-300 rounded-md text-sm leading-5 font-medium text-gray-700 hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800 transition duration-150 ease-in-out"
+
+      span class="ml-3 inline-flex rounded-md shadow-sm"
+        = form.submit "Save", :class => "inline-flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out"
