--- a/app/views/agreements/show.html.slim
+++ b/app/views/agreements/show.html.slim
@@ -1,4 +1,4 @@
-- content_for(:page_title) { @agreement }
+- content_for(:page_title) { @agreement.project_name }
 
 - content_for(:page_header)
   = render(PageHeading::Component.new( \
@@ -6,17 +6,21 @@
       :actions => [ \
         PageHeading::ActionLinkComponent.new(:label => "Edit", :url => edit_agreement_path(@agreement)) \
       ] \
-    ))
+    )) do |component|
+      - component.with(:meta) do
+        div class="mt-2 flex items-center text-sm leading-5 text-gray-500 sm:mr-4"
+          / <!-- Heroicon name: beaker -->
+          svg class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor"
+            path fill-rule="evenodd" d="M7 2a1 1 0 00-.707 1.707L7 4.414v3.758a1 1 0 01-.293.707l-4 4C.817 14.769 2.156 18 4.828 18h10.343c2.673 0 4.012-3.231 2.122-5.121l-4-4A1 1 0 0113 8.172V4.414l.707-.707A1 1 0 0013 2H7zm2 6.172V4h2v4.172a3 3 0 00.879 2.12l1.027 1.028a4 4 0 00-2.171.102l-.47.156a4 4 0 01-2.53 0l-.563-.187a1.993 1.993 0 00-.114-.035l1.063-1.063A3 3 0 009 8.172z" clip-rule="evenodd"
+          = @agreement.service
 
-p
-  strong Customer:
-  = @agreement.customer
-p
-  strong Service:
-  = @agreement.service
-p
-  strong Project name:
-  = @agreement.project_name
+        div class="mt-2 flex items-center text-sm leading-5 text-gray-500"
+          / <!-- Heroicon name: briefcase -->
+          svg class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor"
+            path fill-rule="evenodd" d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z" clip-rule="evenodd"
+            path d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z"
+          = @agreement.customer
+
 p
   strong Price:
   = @agreement.price
