Agreements end on a date, not a second

--- a/app/views/agreements/index.html.slim
+++ b/app/views/agreements/index.html.slim
@@ -35,7 +35,7 @@
                   td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to agreement.project_name, agreement
                   td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to agreement.price, agreement
                   td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to agreement.unit, agreement
-                  td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to agreement.ends_at, agreement
+                  td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to agreement.ends_on, agreement
                   td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to agreement.state, agreement
                   td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to agreement.purchase_order_number, agreement
                   td.px-6.py-4.whitespace-no-wrap.text-right.text-sm.leading-5.font-medium
