--- a/app/views/agreements/show.html.slim
+++ b/app/views/agreements/show.html.slim
@@ -28,8 +28,8 @@ p
   strong Unit:
   = @agreement.unit
 p
-  strong Ends at:
-  = @agreement.ends_at
+  strong Ends on:
+  = @agreement.ends_on
 p
   strong State:
   = @agreement.state
