--- a/app/views/agreements/_form.html.slim
+++ b/app/views/agreements/_form.html.slim
@@ -4,7 +4,7 @@
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :project_name))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :price))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :unit))
-  = render(Form::InputGroup::Component.new(:form => form, :attribute => :ends_on))
+  = render(Form::InputGroup::DateComponent.new(:form => form, :attribute => :ends_on))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :state))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :purchase_order_number))
 
