--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,6 +13,8 @@ html lang="#{I18n.locale}"
 
   body
     .min-h-screen.bg-gray-100
+      = render "layouts/navigation"
+
       .py-10
         - if content_for(:page_header)
           header
