--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -1,4 +1,4 @@
-nav class="bg-white shadow-sm"
+nav class="bg-white shadow-sm" data-controller="dropdown"
   div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
     div class="flex justify-between h-16"
       div class="flex"
@@ -13,7 +13,7 @@ nav class="bg-white shadow-sm"
 
       / Mobile menu button
       div class="-mr-2 flex items-center sm:hidden"
-        button class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out"
+        button class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out" data-action="click->dropdown#toggle click@window->dropdown#hide"
           / Menu open: "hidden", Menu closed: "block"
           svg class="block h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24"
             path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"
@@ -22,7 +22,7 @@ nav class="bg-white shadow-sm"
           svg class="hidden h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24"
             path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"
 
-  div class="hidden sm:hidden"
+  div class="hidden sm:hidden" data-target="dropdown.menu"
     div class="pt-2 pb-3 space-y-1"
       = link_to("Dashboard", root_path, :class => "block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-600 hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300 transition duration-150 ease-in-out")
       = link_to("Agreements", agreements_path, :class => "block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-600 hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300 transition duration-150 ease-in-out")
