Align section headings with other headings on mobile

--- a/app/views/agreements/index.html.slim
+++ b/app/views/agreements/index.html.slim
@@ -14,11 +14,11 @@
     - agreements = @agreements.fetch(state, [])
     - if agreements.any?
       .flex.flex-col
+        div class="mt-8 mb-4 mx-4 sm:mx-0"
+          h2 class="text-lg leading-6 font-medium text-gray-900" = state.upcase_first
+
         .-my-2.overflow-x-auto.sm:-mx-6.lg:-mx-8
           .py-2.align-middle.inline-block.min-w-full.sm:px-6.lg:px-8
-            div class="mt-8 mb-4"
-              h2 class="text-lg leading-6 font-medium text-gray-900" = state.upcase_first
-
             .shadow.overflow-hidden.border-b.border-gray-200.sm:rounded-lg
               table.min-w-full.divide-y.divide-gray-200
                 thead
