--- a/app/views/customers/show.html.slim
+++ b/app/views/customers/show.html.slim
@@ -27,3 +27,27 @@
   p
     strong Phone:
     = @customer.phone
+
+  - if @customer.economic_debtor_number
+    .flex.flex-col
+      div class="mt-8 mb-4 mx-4 sm:mx-0"
+        h2 class="text-lg leading-6 font-medium text-gray-900" Invoices
+
+      - invoices = EconomicClient.new.invoices_for_customer(@customer)
+      .-my-2.overflow-x-auto.sm:-mx-6.lg:-mx-8
+        .py-2.align-middle.inline-block.min-w-full.sm:px-6.lg:px-8
+          .shadow.overflow-hidden.border-b.border-gray-200.sm:rounded-lg
+            table.min-w-full.divide-y.divide-gray-200
+              thead
+                tr
+                  th.px-6.py-3.bg-gray-50.text-left.text-xs.leading-4.font-medium.text-gray-500.uppercase.tracking-wider Date
+                  th.px-6.py-3.bg-gray-50.text-left.text-xs.leading-4.font-medium.text-gray-500.uppercase.tracking-wider Number
+                  th.px-6.py-3.bg-gray-50.text-left.text-xs.leading-4.font-medium.text-gray-500.uppercase.tracking-wider Amount
+
+              tbody.bg-white.divide-y.divide-gray-200
+                - invoices.reverse.each do |invoice|
+                  - invoice.get_data
+                  tr
+                    td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = invoice.date
+                    td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = invoice.number
+                    td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = invoice.net_amount
