--- a/app/views/customers/show.html.slim
+++ b/app/views/customers/show.html.slim
@@ -51,3 +51,5 @@
                     td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = invoice.date
                     td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = invoice.number
                     td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = invoice.net_amount
+  - else
+    = button_to("Create e-conomic debtor", economic_debtors_path(:customer_id => @customer), :class => "inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-indigo-700 bg-indigo-100 hover:bg-indigo-50 focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo active:bg-indigo-200 transition ease-in-out duration-150")
