--- a/app/views/customers/_form.html.slim
+++ b/app/views/customers/_form.html.slim
@@ -1,6 +1,6 @@
 = form_for(customer) do |form|
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :company_name))
-  = render(Form::InputGroup::Component.new(:form => form, :attribute => :tax_region))
+  = render(Form::InputGroup::SelectComponent.new(:form => form, :attribute => :tax_region, :collection => Customer::TAX_REGIONS))
   = render(Form::InputGroup::Component.new(:form => form, :attribute => :tax_id))
   = render(Form::InputGroup::EmailComponent.new(:form => form, :attribute => :invoice_email))
   = render(Form::InputGroup::PhoneComponent.new(:form => form, :attribute => :phone))
