Extract a unit-selector component

--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -47,10 +47,9 @@
         </div>
 
         <%= render(
-          Form::InputGroup::SelectComponent.new(
+          Form::UnitSelectorComponent.new(
             :form => form,
             :attribute => :unit,
-            :collection => Service::UNITS
           )
         ) %>
       </div>
