--- a/app/views/agreements/index.html.slim
+++ b/app/views/agreements/index.html.slim
@@ -37,4 +37,4 @@
                       td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to agreement.customer, agreement
                       td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to agreement.ends_on, agreement
                       td.px-6.py-4.whitespace-no-wrap.text-right.text-sm.leading-5.font-medium
-                        = link_to "Edit", edit_agreement_path(agreement), :class => "text-indigo-600 hover:text-indigo-900"
+                        = link_to "Edit", edit_agreement_path(agreement), :class => "text-green-600 hover:text-green-900"
