--- a/app/views/customers/index.html.slim
+++ b/app/views/customers/index.html.slim
@@ -35,4 +35,4 @@
                   td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to customer.address, customer
                   td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to customer.phone, customer
                   td.px-6.py-4.whitespace-no-wrap.text-right.text-sm.leading-5.font-medium
-                    = link_to "Edit", edit_customer_path(customer), :class => "text-indigo-600 hover:text-indigo-900"
+                    = link_to "Edit", edit_customer_path(customer), :class => "text-green-600 hover:text-green-900"
