--- a/app/views/services/index.html.slim
+++ b/app/views/services/index.html.slim
@@ -29,4 +29,4 @@
                   td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900  = link_to service.unit, service
                   td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900  = link_to service.price, service
                   td.px-6.py-4.whitespace-no-wrap.text-right.text-sm.leading-5.font-medium
-                    = link_to "Edit", edit_service_path(service), :class => "text-indigo-600 hover:text-indigo-900"
+                    = link_to "Edit", edit_service_path(service), :class => "text-green-600 hover:text-green-900"
