--- a/lib/templates/slim/scaffold/index.html.slim
+++ b/lib/templates/slim/scaffold/index.html.slim
@@ -29,4 +29,4 @@
                   td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900 = link_to <%= singular_table_name %>.<%= attribute.name %>, <%= singular_table_name %>
 <% end -%>
                   td.px-6.py-4.whitespace-no-wrap.text-right.text-sm.leading-5.font-medium
-                    = link_to "Edit", edit_<%= singular_table_name %>_path(<%= singular_table_name %>), :class => "text-indigo-600 hover:text-indigo-900"
+                    = link_to "Edit", edit_<%= singular_table_name %>_path(<%= singular_table_name %>), :class => "text-green-600 hover:text-green-900"
