--- a/app/views/customers/show.html.slim
+++ b/app/views/customers/show.html.slim
@@ -26,6 +26,25 @@
     strong Phone:
     = @customer.phone
 
+  .flex.flex-col
+    div class="mt-8 mb-4 mx-4 sm:mx-0"
+      h2 class="text-lg leading-6 font-medium text-gray-900" Agreements
+
+    - agreements = @customer.agreements
+    - if agreements.any?
+      .-my-2.overflow-x-auto.sm:-mx-6.lg:-mx-8
+        .py-2.align-middle.inline-block.min-w-full.sm:px-6.lg:px-8
+          .shadow.overflow-hidden.border-b.border-gray-200.sm:rounded-lg
+            table.min-w-full.divide-y.divide-gray-200
+              thead
+                tr
+                  th.px-6.py-3.bg-gray-50.text-left.text-xs.leading-4.font-medium.text-gray-500.uppercase.tracking-wider Date
+                  th.px-6.py-3.bg-gray-50.text-left.text-xs.leading-4.font-medium.text-gray-500.uppercase.tracking-wider Number
+                  th.px-6.py-3.bg-gray-50.text-left.text-xs.leading-4.font-medium.text-gray-500.uppercase.tracking-wider Amount
+
+              tbody.bg-white.divide-y.divide-gray-200
+                = render :collection => agreements, :partial => "agreements/row", :as => :agreement
+
   - if @customer.economic_debtor_number
     .flex.flex-col
       div class="mt-8 mb-4 mx-4 sm:mx-0"
