--- a/app/views/agreements/_row.html.slim
+++ b/app/views/agreements/_row.html.slim
@@ -7,6 +7,6 @@ tr
     = link_to agreement.customer, agreement
   td.px-6.py-4.whitespace-no-wrap.text-sm.leading-5.font-medium.text-gray-900
     - if agreement.ends_on
-      = link_to agreement.ends_on, agreement
+      = link_to I18n.localize(agreement.ends_on), agreement
   td.px-6.py-4.whitespace-no-wrap.text-right.text-sm.leading-5.font-medium
     = link_to "Edit", edit_agreement_path(agreement), :class => "text-green-600 hover:text-green-900"
